# payroll-pdf-mailer

./: .env.example  .gitignore  README.md  pyproject.toml
beispiele/: contacts.csv
docs/: datenfluss.md
src/payroll_pdf_mailer/: __init__.py  cli.py  core.py
tests/: test_core.py
