[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "payroll-pdf-mailer"
version = "0.1.0"
description = "Dry-run-first Versandplanung fuer synthetische Lohnabrechnungs-PDFs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
]

[project.scripts]
payroll-pdf-mailer = "payroll_pdf_mailer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
